Added some domain for CORS access control